2012-06-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/serial.c (do_real_config): Fix cast to fix
	compilation error on sparc64.

2012-06-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Use ITC on IA64 rather than broken routine based on daytime.

	* grub-core/kern/efi/efi.c (grub_rtc_get_time_ms) [__ia64__]: Remove on
	ia64.
	(grub_get_rtc) [__ia64__]: Likewise.
	* grub-core/kern/ia64/efi/init.c (divisor): New variable.
	(get_itc): New function.
	(grub_rtc_get_time_ms): Likewise.
	(grub_machine_init): Calibrate ITC.
	* include/grub/efi/time.h (grub_get_rtc), (GRUB_TICKS_PER_SECOND):
	Keep only on non-ia64. Don't export since it's broken and used only
	if TSC is unavailable.

2012-06-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/efi/efidisk.c (find_parent_device): Return the parent
	even if it's used.
	(name_devices): Replace #if 0 with #ifdef DEBUG_NAMES.
	Skip if parent is unused.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Skip on ppc due to serious firmware bug.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix wildcard escaping.

	* grub-core/commands/wildcard.c (wildcard_escape): Moved from here ...
	* grub-core/script/execute.c (wildcard_escape): .. to here.
	Don't escape dot.
	* grub-core/commands/wildcard.c (wildcard_unescape): Moved from here ...
	* grub-core/script/execute.c (wildcard_unescape): .. to here.
	Don't escape dot.
	* grub-core/script/execute.c (gettext_append): Always escape.
	(grub_script_arglist_to_argv): Always handle escaping/unescaping.
	* grub-core/script/yylex.l: Don't cut away the escaping.
	* tests/grub_script_echo1.in: Add tests with wildcard.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/serial/ftdi.c (real_config): Handle 1.5 stop bits.
	(ftdi_hw_configure): Likewise.
	* grub-core/bus/usb/serial/pl2303.c (GRUB_PL2303_STOP_BITS_1_5): New
	define.
	(real_config): Handle 1.5 stop bits.